@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkText.c,v 1.98 2010/03/11 09:24:07 dkf Exp $
+ * RCS: @(#) $Id: tkText.c,v 1.99 2010/03/11 09:43:19 dkf Exp $
  */
 
 #include "default.h"
@@ -4708,7 +4708,9 @@ DumpLine(
 			segPtr->body.chars + first, command, &index, what);
 	    }
 	} else if ((offset >= startByte)) {
-	    if ((what & TK_DUMP_MARK) && (segPtr->typePtr->name[0] == 'm')) {
+	    if ((what & TK_DUMP_MARK)
+		    && (segPtr->typePtr == &tkTextLeftMarkType
+		    || segPtr->typePtr == &tkTextRightMarkType)) {
 		const char *name;
 		TkTextMark *markPtr = (TkTextMark *) &segPtr->body;
 
@@ -4744,7 +4746,7 @@ DumpLine(
 			segPtr->body.toggle.tagPtr->name, command, &index,
 			what);
 	    } else if ((what & TK_DUMP_IMG) &&
-		    (segPtr->typePtr->name[0] == 'i')) {
+		    (segPtr->typePtr == &tkTextEmbImageType)) {
 		TkTextEmbImage *eiPtr = (TkTextEmbImage *)&segPtr->body;
 		const char *name = (eiPtr->name == NULL) ? "" : eiPtr->name;
 
@@ -4753,7 +4755,7 @@ DumpLine(
 		lineChanged = DumpSegment(textPtr, interp, "image", name,
 			command, &index, what);
 	    } else if ((what & TK_DUMP_WIN) &&
-		    (segPtr->typePtr->name[0] == 'w')) {
+		    (segPtr->typePtr == &tkTextEmbWindowType)) {
 		TkTextEmbWindow *ewPtr = (TkTextEmbWindow *)&segPtr->body;
 		const char *pathname;
 
